// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_acceptance_rate given { codeSuggestions: { acceptedCount: 0, shownCount: 20 } } 1`] = `
{
  "identifier": "code_suggestions_acceptance_rate",
  "tooltip": "0/20",
  "value": 0,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_acceptance_rate given { codeSuggestions: { acceptedCount: 3 } } 1`] = `
{
  "identifier": "code_suggestions_acceptance_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_acceptance_rate given { codeSuggestions: { acceptedCount: 3, shownCount: 4 } } 1`] = `
{
  "identifier": "code_suggestions_acceptance_rate",
  "tooltip": "3/4",
  "value": 75,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_acceptance_rate given { codeSuggestions: { shownCount: 4 } } 1`] = `
{
  "identifier": "code_suggestions_acceptance_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_usage_rate given {
  codeSuggestions: { contributorsCount: 0 },
  codeContributorsCount: 10
} 1`] = `
{
  "identifier": "code_suggestions_usage_rate",
  "tooltip": "0/10",
  "value": 0,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_usage_rate given {
  codeSuggestions: { contributorsCount: 5 },
  codeContributorsCount: 10
} 1`] = `
{
  "identifier": "code_suggestions_usage_rate",
  "tooltip": "5/10",
  "value": 50,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_usage_rate given { codeContributorsCount: 5 } 1`] = `
{
  "identifier": "code_suggestions_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_usage_rate given { codeSuggestions: { contributorsCount: 2 } } 1`] = `
{
  "identifier": "code_suggestions_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_chat_usage_rate given { duoAssignedUsersCount: 3 } 1`] = `
{
  "identifier": "duo_chat_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_chat_usage_rate given { duoChatContributorsCount: 0, duoAssignedUsersCount: 50 } 1`] = `
{
  "identifier": "duo_chat_usage_rate",
  "tooltip": "0/50",
  "value": 0,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_chat_usage_rate given { duoChatContributorsCount: 4 } 1`] = `
{
  "identifier": "duo_chat_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_chat_usage_rate given { duoChatContributorsCount: 7, duoAssignedUsersCount: 8 } 1`] = `
{
  "identifier": "duo_chat_usage_rate",
  "tooltip": "7/8",
  "value": 87.5,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_rca_usage_rate given { duoAssignedUsersCount: 3 } 1`] = `
{
  "identifier": "duo_rca_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_rca_usage_rate given { rootCauseAnalysisUsersCount: 0, duoAssignedUsersCount: 50 } 1`] = `
{
  "identifier": "duo_rca_usage_rate",
  "tooltip": "0/50",
  "value": 0,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_rca_usage_rate given { rootCauseAnalysisUsersCount: 5, duoAssignedUsersCount: 8 } 1`] = `
{
  "identifier": "duo_rca_usage_rate",
  "tooltip": "5/8",
  "value": 62.5,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_rca_usage_rate given { rootCauseAnalysisUsersCount: 10 } 1`] = `
{
  "identifier": "duo_rca_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_review_comment_count given { codeReview: { postCommentDuoCodeReviewOnDiffEventCount: 0 } } 1`] = `
{
  "identifier": "duo_review_comment_count",
  "value": 0,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_review_comment_count given { codeReview: { postCommentDuoCodeReviewOnDiffEventCount: 25 } } 1`] = `
{
  "identifier": "duo_review_comment_count",
  "value": 25,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_review_comment_count given {} 1`] = `
{
  "identifier": "duo_review_comment_count",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_review_requests_count given {
  codeReview: {
    requestReviewDuoCodeReviewOnMrByAuthorEventCount: 0,
    requestReviewDuoCodeReviewOnMrByNonAuthorEventCount: 0
  }
} 1`] = `
{
  "identifier": "duo_review_requests_count",
  "value": 0,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_review_requests_count given {
  codeReview: {
    requestReviewDuoCodeReviewOnMrByAuthorEventCount: 5,
    requestReviewDuoCodeReviewOnMrByNonAuthorEventCount: 10
  }
} 1`] = `
{
  "identifier": "duo_review_requests_count",
  "value": 15,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_review_requests_count given {
  codeReview: { requestReviewDuoCodeReviewOnMrByAuthorEventCount: 10 }
} 1`] = `
{
  "identifier": "duo_review_requests_count",
  "value": 10,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_review_requests_count given {
  codeReview: { requestReviewDuoCodeReviewOnMrByNonAuthorEventCount: 5 }
} 1`] = `
{
  "identifier": "duo_review_requests_count",
  "value": 5,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_review_requests_count given {} 1`] = `
{
  "identifier": "duo_review_requests_count",
  "value": "-",
}
`;
